# Old-Fortnite-Launcher

./: README.md  index.html  jsrepo.json  package-lock.json  package.json  vite.config.ts
public/: fortnite-chapter-4-mega-city.avif  full-locker.avif  og-donator.avif  pulse-donator.avif
src/: App.css  App.tsx  login.tsx  main.tsx  onboard.tsx  router.tsx  settings.tsx
src-tauri/: Cargo.toml  build.rs  handshake.txt  tauri.conf.json  user_data.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utilities.rs
src-tauri/src/modules/: downloads.rs  exclude.rs  game.rs  mod.rs  remove.rs  rpc.rs  settings.rs
src/assets/: style.css
