[package]
name = "crystal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crystal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
sha2 = "0.10.8"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-os = "2"
log = "0.4"
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",        
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",     
    "Win32_Foundation",             
] }
winapi = { version = "0.3", features = ["tlhelp32", "shellapi", "winbase"] }
sysinfo = "0.29.10"
rayon = "1.10.0"
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11.18", features = ["blocking", "stream", "json"] }
futures-util = "0.3"
flate2 = "1.0.25"
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }
indicatif = "0.17.3"
tauri-plugin-http = "2.0"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
