[package]
name = "vortyxlauncher"
version = "1.0.20"
description = "vortyx Launcher"
authors = ["secret_pablo"]
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = 3
debug = false
lto = true

[lib]
name = "vortyx"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
winres = "0.1"

[dependencies]
discord-rpc-client = "^0.4"
libloading = "0.8"
uuid = "1.14.0"
dirs = "6.0.0"
msgbox = "0.7.0"
warp = "0.3"
regex = "1.7"
mongodb = "2.8"
ntapi = "0.4.1"
tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link", branch = "main" }
reqwest = { version = "0.11.3", features = ["stream"] }
winapi = { version = "0.3", features = ["tlhelp32", "securitybaseapi", "shellapi", "processthreadsapi", "winnt"] }
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
window-shadows = "0.2.2"
window-vibrancy = "0.4"
futures-util = "0.3.14"
futures = "0.3.31"
injrs = "0.1.2"
zip-extract = "0.1.3"
tasklist = "0.2.13"
serde_json = "1.0"
sysinfo = "0.33.0"
num_cpus = "1.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.8"
embed-resource = "1.6"
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_SystemServices", "Win32_System_Threading"] }
zip = "2.2.3"
lazy_static = "1.5.0"
winres = "0.1.12"
time = "0.3.41"

[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]

[features]
custom-protocol = ["tauri/custom-protocol"]
